--- a/src/app/auth/broker-auth-page/components/broker-auth-page/broker-auth-page.component.scss
+++ b/src/app/auth/broker-auth-page/components/broker-auth-page/broker-auth-page.component.scss
@@ -1,6 +1,7 @@
 .auth-page {
   width: 100vw;
-  background: url(/assets/images/auth_background.png) top center;
+  background: url(/assets/images/pages-backgrounds/auth-broker-background.png)
+    top center;
   background-attachment: fixed;
   font-family: 'Gilroy';
   color: #ffffff;
