--- a/src/app/auth/broker-auth-page/components/broker-auth-tabs/broker-auth-tabs.component.html
+++ b/src/app/auth/broker-auth-page/components/broker-auth-tabs/broker-auth-tabs.component.html
@@ -6,14 +6,22 @@
 >
   <mat-tab>
     <ng-template mat-tab-label class="tab-item">
-      <img src="/assets/images/phone.svg" class="tab-item__img" alt="phone" />
+      <img
+        src="/assets/images/brokers-auth-navigation-logos/phone-logo.svg"
+        class="tab-item__img"
+        alt="phone-logo"
+      />
       <span class="tab-item__text">Email</span>
     </ng-template>
     <tes-auth-email-form></tes-auth-email-form>
   </mat-tab>
   <mat-tab>
     <ng-template mat-tab-label class="tab-item">
-      <img src="/assets/images/vin.svg" class="tab-item__img" alt="vin" />
+      <img
+        src="/assets/images/brokers-auth-navigation-logos/vin-logo.svg"
+        class="tab-item__img"
+        alt="vin-logo"
+      />
       <span class="tab-item__text">По ID-дилера</span>
     </ng-template>
     <tes-auth-broker-id-form></tes-auth-broker-id-form>
