--- a/src/app/pages/calculation-loan-page/components/car-info/car-info.component.html
+++ b/src/app/pages/calculation-loan-page/components/car-info/car-info.component.html
@@ -186,7 +186,7 @@
             <div>
               <span class="label__tooltip">Дополнительная скидка</span>
               <img
-                src="/assets/images/tooltip_item.svg"
+                src="/assets/images/custom-elements-icons/tooltip-icon.svg"
                 alt="tool-tip"
                 class="example-tab-icon"
                 matTooltip="tooltip"
@@ -208,7 +208,9 @@
               formControlName="telematic_misos_light"
               name="telematic_misos_light"
             />
-            <img src="/assets/images/missos_light_icon.svg" />
+            <img
+              src="/assets/images/telematic-system-icons/missos-light-icon.svg"
+            />
             <label
               for="telematic_misos_light"
               class="car-info-item-telematic__label"
@@ -224,7 +226,9 @@
               formControlName="telematic_bluelink"
               name="telematic_bluelink"
             />
-            <img src="/assets/images/bluelink_icon.svg" />
+            <img
+              src="/assets/images/telematic-system-icons/bluelink-icon.svg"
+            />
             <label
               for="telematic_bluelink"
               class="car-info-item-telematic__label"
@@ -240,7 +244,9 @@
               formControlName="telematic_misos_pro"
               name="telematic_misos_pro"
             />
-            <img src="/assets/images/misos_pro_icon.svg" />
+            <img
+              src="/assets/images/telematic-system-icons/misos-pro-icon.svg"
+            />
             <label
               for="telematic_misos_pro"
               class="car-info-item-telematic__label"
