--- a/src/app/pages/calculation-loan-page/components/owner/owner.component.scss
+++ b/src/app/pages/calculation-loan-page/components/owner/owner.component.scss
@@ -81,11 +81,13 @@
     }
   }
   .previous-kasko {
-    background: url(/assets/images/previous_kasko_bg.png) center;
+    background: url(/assets/images/loan-page-buttons-backgrounds/previous-kasko-bg.png)
+      center;
   }
 
   .previous-osago {
-    background: url(/assets/images/previous_osago_bg.png) center;
+    background: url(/assets/images/loan-page-buttons-backgrounds/previous-osago-bg.png)
+      center;
   }
 }
 
