--- a/src/app/pages/calculation-loan-page/components/product-calculation/dialogs/insurance-policy-calculation-dialog/insurance-policy-card/insurance-policy-card.component.html
+++ b/src/app/pages/calculation-loan-page/components/product-calculation/dialogs/insurance-policy-calculation-dialog/insurance-policy-card/insurance-policy-card.component.html
@@ -14,7 +14,9 @@
       </div>
 
       <img
-        [src]="'/assets/images/offer-status-' + card.status + '.svg'"
+        [src]="
+          '/assets/images/offer-statuses/offer-status-' + card.status + '.svg'
+        "
         alt=""
       />
     </div>
