--- a/src/app/pages/documents-payments-page/components/documents/documents.component.html
+++ b/src/app/pages/documents-payments-page/components/documents/documents.component.html
@@ -4,7 +4,7 @@
     <div class="document-header__bank">
       <div class="document-header__bank--logo">
         <img
-          src="/assets/images/{{ document.bank_img }}"
+          src="/assets/images/insurance-companies/{{ document.bank_img }}"
           alt="{{ document.bank_img }}"
         />
       </div>
