--- a/src/app/pages/main-form-content/componets/side-bar/side-bar.component.scss
+++ b/src/app/pages/main-form-content/componets/side-bar/side-bar.component.scss
@@ -30,7 +30,7 @@
       border: 1px solid #72879e;
     }
     .mat-step-icon-state-edit {
-      background-image: url('/assets/images/completed_step_icon.png');
+      background-image: url('/assets/images/custom-elements-icons/completed-step-icon.svg');
     }
   }
 
