--- a/src/app/pages/processing-page/components/client-info/client-info.component.html
+++ b/src/app/pages/processing-page/components/client-info/client-info.component.html
@@ -9,7 +9,7 @@
     >
       <img
         class="passport-data__auto-registration-img"
-        src="/assets/images/photo.svg"
+        src="/assets/images/custom-elements-icons/photo-icon.svg"
         alt="auto-registatrion"
       />
       <span class="passport-data__auto-registration-text"
