--- a/src/app/shared/components/input-slider/input-slider.component.scss
+++ b/src/app/shared/components/input-slider/input-slider.component.scss
@@ -19,7 +19,7 @@
     width: 50px !important;
     border-radius: 150px !important;
     background-color: #72879e !important;
-    background-image: url('/assets/images/arrows.svg');
+    background-image: url('/assets/images/custom-elements-icons/input-slider-arrows-icon.svg');
     background-repeat: no-repeat;
     background-position: center;
   }
