--- a/src/app/unused/user-auth-page/components/auth-tabs/auth-tabs.component.html
+++ b/src/app/unused/user-auth-page/components/auth-tabs/auth-tabs.component.html
@@ -5,7 +5,11 @@
 >
   <mat-tab>
     <ng-template mat-tab-label class="tab-item">
-      <img src="/assets/images/phone.svg" class="tab-item__img" alt="phone" />
+      <img
+        src="/assets/images/brokers-auth-navigation-logos/phone-logo.svg"
+        class="tab-item__img"
+        alt="phone-logo.svg"
+      />
       <span class="tab-item__text">По телефону</span>
     </ng-template>
     <ng-content></ng-content>
@@ -13,14 +17,22 @@
 
   <mat-tab>
     <ng-template mat-tab-label class="tab-item">
-      <img src="/assets/images/vin.svg" class="tab-item__img" alt="vin" />
+      <img
+        src="/assets/images/brokers-auth-navigation-logos/vin-logo.svg"
+        class="tab-item__img"
+        alt="vin-logo.svg"
+      />
       <span class="tab-item__text">По VIN</span>
     </ng-template>
   </mat-tab>
 
   <mat-tab>
     <ng-template mat-tab-label class="tab-item">
-      <img src="/assets/images/number.svg" class="tab-item__img" alt="number" />
+      <img
+        src="/assets/images/user-auth-navigation-logo/car-number-logo.svg"
+        class="tab-item__img"
+        alt="car-number-logo"
+      />
       <span class="tab-item__text">По гос.номеру</span>
     </ng-template>
   </mat-tab>
