--- a/src/app/unused/user-auth-page/components/authorization/authorization.component.html
+++ b/src/app/unused/user-auth-page/components/authorization/authorization.component.html
@@ -36,7 +36,10 @@
       [disabled]="isSubmitting$ | async"
     >
       Войти
-      <img src="/assets/images/login_button.svg" alt="login" />
+      <img
+        src="/assets/images/user-auth-navigation-logo/user-login-button-logo.svg"
+        alt="login"
+      />
     </button>
   </form>
 </div>
