--- a/src/app/unused/user-auth-page/components/register/register.component.html
+++ b/src/app/unused/user-auth-page/components/register/register.component.html
@@ -31,7 +31,10 @@
         [disabled]="isSubmitting$ | async"
       >
         Войти
-        <img src="/assets/images/login_button.svg" alt="login" />
+        <img
+          src="/assets/images/user-auth-navigation-logo/user-login-button-logo.svg"
+          alt="user-login-button-logo"
+        />
       </button>
     </form>
   </tes-auth-tabs>
