--- a/src/app/pages/main-form-content/componets/main-form-header/main-form-header.component.html
+++ b/src/app/pages/main-form-content/componets/main-form-header/main-form-header.component.html
@@ -2,7 +2,11 @@
   <div class="toolbar-container">
     <div class="logo__container">
       <a routerLink="/">
-        <img class="logo__img" src="/assets/images/header-logo.svg" alt="" />
+        <img
+          class="logo__img"
+          src="/assets/images/main-page-header-logos/tes-header-logo.svg"
+          alt="tes-header-logo"
+        />
       </a>
       <div class="title-container">
         <p>Кредитный и страховой калькулятор</p>
@@ -14,7 +18,11 @@
       </div>
       <div class="user">
         <a routerLink="/">
-          <img class="user__img" src="/assets/images/user-logo.svg" alt="" />
+          <img
+            class="user__img"
+            src="/assets/images/main-page-header-logos/user-logo.svg"
+            alt="user-logo"
+          />
         </a>
       </div>
     </div>
