--- a/src/app/unused/user-auth-page/components/tes-navigation-logo/tes-navigation-logo.component.html
+++ b/src/app/unused/user-auth-page/components/tes-navigation-logo/tes-navigation-logo.component.html
@@ -1,7 +1,11 @@
 <div class="logo__sphere__third">
   <div class="logo__sphere__second">
     <div class="logo__sphere">
-      <img src="/assets/images/tes_logo.svg" class="img" alt="tes_logo" />
+      <img
+        src="/assets/images/user-auth-navigation-logo/tes-logo.svg"
+        class="img"
+        alt="tes-logo"
+      />
     </div>
   </div>
 </div>
