--- a/src/assets/styles/_reset.scss
+++ b/src/assets/styles/_reset.scss
@@ -76,7 +76,7 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
-  -webkit-text-fill-color: #343E48 !important;
+  -webkit-text-fill-color: #343e48 !important;
   -webkit-box-shadow: 0 0 0 30px #f2f4f7 inset !important;
 }
 
@@ -90,7 +90,7 @@ select {
   appearance: none !important;
   -moz-appearance: none !important;
   -webkit-appearance: none !important;
-  background-image: url('/assets/images/select_arrow.svg') !important;
+  background-image: url('/assets/images/custom-elements-icons/select-arrow-icon.svg') !important;
   background-repeat: no-repeat !important;
   background-position: calc(100% - 10px) center !important;
 }
