--- a/src/app/shared/components/input-clearer/input-clearer.component.html
+++ b/src/app/shared/components/input-clearer/input-clearer.component.html
@@ -14,7 +14,11 @@
       (click)="clearInputValue()"
       *ngIf="showClearer"
     >
-      +
+      <img
+        src="/assets/images/custom-elements-icons/delete-button-icon.svg"
+        alt=""
+        srcset=""
+      />
     </button>
   </div>
 </form>
