--- a/src/app/pages/calculation-loan-page/components/product-calculation/product-calculation-table/product-calculation-table.component.html
+++ b/src/app/pages/calculation-loan-page/components/product-calculation/product-calculation-table/product-calculation-table.component.html
@@ -1,57 +1,50 @@
-<div class="status-info-block d-flex justify-content-end">
-  <img [src]="'/assets/images/offer-status-green.svg'" alt="" />
+<div class='status-info-block d-flex justify-content-end'>
+  <img [src]='"assets/images/offer-status-green.svg"' alt=''>
   <span>Приоритетное предложение</span>
-  <img [src]="'/assets/images/offer-status-yellow.svg'" alt="" />
+  <img [src]='"assets/images/offer-status-yellow.svg"' alt=''>
   <span>Средний приоритет</span>
-  <img [src]="'/assets/images/offer-status-red.svg'" alt="" />
+  <img [src]='"assets/images/offer-status-red.svg"' alt=''>
   <span>Средний приоритет</span>
 </div>
-<div class="client-list-container">
-  <div class="table-container">
-    <table mat-table [dataSource]="data" class="clients-table">
-      <ng-container matColumnDef="product">
-        <th mat-header-cell *matHeaderCellDef>Продукт</th>
-        <td mat-cell *matCellDef="let element">{{ element.product }}</td>
+<div class='client-list-container'>
+  <div class='table-container'>
+    <table mat-table [dataSource]='data' class='clients-table'>
+      <ng-container matColumnDef='product'>
+        <th mat-header-cell *matHeaderCellDef> Продукт</th>
+        <td mat-cell *matCellDef='let element'> {{element.product}} </td>
       </ng-container>
 
       <!-- Name Column -->
-      <ng-container matColumnDef="credit">
-        <th class="text-center" mat-header-cell *matHeaderCellDef>В кредит</th>
-        <td class="text-center" mat-cell *matCellDef="let element">
-          <input
-            class="checkbox"
-            type="checkbox"
-            [(ngModel)]="element.credit"
-          />
+      <ng-container matColumnDef='credit'>
+        <th class='text-center' mat-header-cell *matHeaderCellDef> В кредит</th>
+        <td class='text-center' mat-cell *matCellDef='let element'>
+          <input class='checkbox' type='checkbox' [(ngModel)]='element.credit'>
         </td>
       </ng-container>
 
       <!-- Weight Column -->
-      <ng-container matColumnDef="insuranceCompany">
-        <th class="text-center" mat-header-cell *matHeaderCellDef>
-          Страховая компания
-        </th>
-        <td class="text-center" mat-cell *matCellDef="let element">
-          <img
-            src="/assets/images/sovkom_logo.svg"
-            alt=""
-            class="insurance-elevation"
-          />
+      <ng-container matColumnDef='provider'>
+        <th class='text-center' mat-header-cell *matHeaderCellDef> Страховая компания</th>
+        <td class='text-center' mat-cell *matCellDef='let element'>
+          <img class='insurance-elevation'
+               alt=''
+               [src]="'assets/images/' + element.provider + '_logo.svg'">
         </td>
       </ng-container>
 
       <!-- Symbol Column -->
-      <ng-container matColumnDef="price">
-        <th class="text-center" mat-header-cell *matHeaderCellDef>Стоимость</th>
-        <td mat-cell *matCellDef="let element">
-          <span class="ms-3">
-            {{ element.price | currency : 'RUB' : '₽' : '1.0-0' }}
+      <ng-container matColumnDef='total_summ'>
+        <th class='text-center' mat-header-cell *matHeaderCellDef> Стоимость</th>
+        <td mat-cell *matCellDef='let element'>
+          <span class='ms-3'>
+          {{element.total_summ | currency: 'RUB':'₽':'1.0-0'}}
           </span>
         </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
+      <tr mat-row *matRowDef='let row; columns: displayedColumns;'></tr>
     </table>
+
   </div>
 </div>
