--- a/src/app/auth/user-filter-page/components/clients-list/clients-list.component.scss
+++ b/src/app/auth/user-filter-page/components/clients-list/clients-list.component.scss
@@ -1,6 +1,6 @@
 .client-list-container {
   width: 75vw;
-  height: 100%;
+  min-height: 100%;
   background: #ffffff;
   filter: drop-shadow(2px 2px 19px rgba(52, 62, 72, 0.21));
   border-radius: 20px;
