--- a/src/app/pages/documents-payments-page/documents-payments-page.component.scss
+++ b/src/app/pages/documents-payments-page/documents-payments-page.component.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  s &__title {
+  &__title {
     font-weight: 400;
     font-size: 30px;
     line-height: 130%;
