--- a/src/app/pages/calculation-loan-page/components/car-info/car-info.component.html
+++ b/src/app/pages/calculation-loan-page/components/car-info/car-info.component.html
@@ -1,5 +1,5 @@
 <div class="car-info-container">
-  <div class="car-info-container-title">Информация об автомобиле</div>
+  <tes-card-title [title]="carInfoTitle"></tes-card-title>
   <div class="car-info-container-content">
     <div class="car-info-details">
       <form class="car-info-details-form" [formGroup]="formCarOptions">
