--- a/src/app/pages/calculation-loan-page/components/product-calculation/dialogs/insurance-policy-calculation-dialog/insurance-policy-card/insurance-policy-card.component.html
+++ b/src/app/pages/calculation-loan-page/components/product-calculation/dialogs/insurance-policy-calculation-dialog/insurance-policy-card/insurance-policy-card.component.html
@@ -34,7 +34,7 @@
 
       <div
         class='card-content__options-button'
-        *ngIf='policy.options.available?.option.length > 0'
+        *ngIf='policy.options?.available?.option.length > 0'
         (click)='onShowOptions(policy.options)'
       >
         Настроить опции
