--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -6,9 +6,6 @@ ngp-image-picker .place-image .image-holder-loaded img {
   background: none !important;
 }
 
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active{
-  -webkit-box-shadow: 0 0 0 30px  #3A444F inset !important;
+tes-card-layout {
+  width: 100%;
 }
