--- a/src/app/pages/calculation-loan-page/components/car-info/car-info.component.html
+++ b/src/app/pages/calculation-loan-page/components/car-info/car-info.component.html
@@ -1,24 +1,26 @@
-<div class="car-info-container">
-  <div class="car-info-container-title">Информация об автомобиле</div>
+
+<!--  <div class="car-info-container-title">Информация об автомобиле</div>-->
+  <tes-card-title [title]='cardTitle'>
+  </tes-card-title>
   <div class="car-info-container-content">
     <div class="car-info-details">
       <form class="car-info-details-form" [formGroup]="formCarOptions">
         <div class="car-info-form-container">
           <div class="car-info-item">
-            <label class="car-info-item__label" for="VIN">VIN</label>
+            <label class="car-info-item__label" for="vin">VIN</label>
             <input
               class="car-info-item__input"
-              name="VIN"
+              name="vin"
               type="text"
-              formControlName="VIN"
+              formControlName="vin"
             />
             <div
               *ngIf="
-                formCarOptions.controls['VIN'].touched &&
-                formCarOptions.controls['VIN'].invalid
+                formCarOptions.controls['vin'].touched &&
+                formCarOptions.controls['vin'].invalid
               "
             >
-              <small *ngIf="formCarOptions.controls['VIN'].invalid">
+              <small *ngIf="formCarOptions.controls['vin'].invalid">
                 Введите VIN</small
               >
             </div>
@@ -83,17 +85,17 @@
             </div>
           </div>
           <div class="car-info-item">
-            <label class="car-info-item__label" for="pts_issue_year">ПТС</label>
+            <label class="car-info-item__label" for="pts">ПТС</label>
             <input
               class="car-info-item__input"
-              name="pts_issue_year"
+              name="pts"
               type="text"
-              formControlName="pts_issue_year"
+              formControlName="pts"
             />
             <div
               *ngIf="
-                formCarOptions.controls['pts_issue_year'].touched &&
-                formCarOptions.controls['pts_issue_year'].invalid
+                formCarOptions.controls['pts'].touched &&
+                formCarOptions.controls['pts'].invalid
               "
             >
               <small *ngIf="formCarOptions.controls['pts_issue_year'].invalid">
@@ -163,6 +165,7 @@
             <label class="form-group__item_label">
               Стоимость авто, руб
               <tes-input-slider
+                [currentValue]="currentCarPrice"
                 (componentValue)="getCarPrice($event)"
               ></tes-input-slider>
             </label>
@@ -199,71 +202,24 @@
               </div>
             </div>
             <div *ngIf="car_telematic">
-              <div>
-                <span class="car-info-item__label"
-                  >Тип телематической системы:</span
-                >
-              </div>
-              <fieldset class="car-info-item-telematic">
-                <input
-                  id="telematic_misos_light"
-                  type="checkbox"
-                  class="car-info-item-telematic__checkbox"
-                  formControlName="telematic_misos_light"
-                  name="telematic_misos_light"
-                />
-                <img src="/assets/images/missos_light_icon.svg" />
-                <label
-                  for="telematic_misos_light"
-                  class="car-info-item-telematic__label"
-                >
-                  Misos LIGHT
-                </label>
-              </fieldset>
-              <fieldset class="car-info-item-telematic">
-                <input
-                  id="telematic_bluelink"
-                  type="checkbox"
-                  class="car-info-item-telematic__checkbox"
-                  formControlName="telematic_bluelink"
-                  name="telematic_bluelink"
-                />
-                <img src="/assets/images/bluelink_icon.svg" />
-                <label
-                  for="telematic_bluelink"
-                  class="car-info-item-telematic__label"
-                >
-                  Bluelink
-                </label>
-              </fieldset>
-              <fieldset class="car-info-item-telematic">
-                <input
-                  id="telematic_misos_pro"
-                  type="checkbox"
-                  class="car-info-item-telematic__checkbox"
-                  formControlName="telematic_misos_pro"
-                  name="telematic_misos_pro"
-                />
-                <img src="/assets/images/misos_pro_icon.svg" />
-                <label
-                  for="telematic_misos_pro"
-                  class="car-info-item-telematic__label"
-                >
-                  Misos PRO
-                </label>
-              </fieldset>
+              <mat-form-field appearance="fill" class="car-info-item car-telematic-type">
+                <mat-label class="car-info-item__label">Тип телематической системы:</mat-label>
+                <mat-select formControlName="car_telematic_type" multiple>
+                  <mat-option *ngFor="let telematicType of  telematicTypesList" [value]="telematicType">{{telematicType}}</mat-option>
+                </mat-select>
+              </mat-form-field>
             </div>
           </div>
         </div>
-
         <div class="car-info-details-form__button">
           <tes-submit-form-button
             [formValues]="formCarOptions"
             [isDisable]="!formCarOptions.valid"
+            (submitForm)='submitForm($event)'
             buttonText="Далее"
           ></tes-submit-form-button>
         </div>
       </form>
     </div>
   </div>
-</div>
+
