--- a/src/app/pages/calculation-loan-page/components/drivers/drivers-content/drivers-content.component.html
+++ b/src/app/pages/calculation-loan-page/components/drivers/drivers-content/drivers-content.component.html
@@ -1,14 +1,13 @@
-<div class="tes-wrapper">
+
   <div class="container">
     <div class="row">
       <div class="col-12 tes-wrapper-title">Водители</div>
       <div class="col-12">
         <div class="tes-wrapper-content">
           <div class="driver-info-details">
-            <form
-              class="driver-info-details-form"
-              [formGroup]="formDriversData"
-              (ngSubmit)="onSubmitForm()"
+            <form *ngIf='formDriversData'
+                  class="driver-info-details-form"
+                  [formGroup]="formDriversData"
             >
               <div class="driver-info-details-form-container">
                 <div class="row">
@@ -28,7 +27,7 @@
                 </div>
 
                 <div formArrayName="drivers">
-                  <div *ngFor="let driver of drivers.controls; let i = index">
+                  <div *ngFor="let driver of getDrivers().controls; let i = index">
                     <div [formGroupName]="i">
                       <div class="row mt-4 form-group">
                         <div class="col-6 mb-4">
@@ -37,6 +36,7 @@
                               class="border-bottom w-100"
                               type="text"
                               formControlName="driver_title"
+                              readonly
                             />
                           </fieldset>
                         </div>
@@ -57,55 +57,55 @@
                         <div class="col-4">
                           <tes-input-basic
                             [label]="'Фамилия'"
-                            formControlName="driver_surname"
+                            formControlName="first_name"
                           ></tes-input-basic>
                         </div>
                         <div class="col-4">
                           <tes-input-basic
                             [label]="'Имя'"
-                            formControlName="driver_name"
+                            formControlName="last_name"
                           ></tes-input-basic>
                         </div>
                         <div class="col-4">
                           <tes-input-basic
                             [label]="'Отчество'"
-                            formControlName="driver_middle_name"
+                            formControlName="patronymic"
                           ></tes-input-basic>
                         </div>
                         <div class="col-6">
                           <tes-input-basic
                             [label]="'Введите номер телефона'"
-                            formControlName="driver_phone_number"
+                            formControlName="phone"
                           ></tes-input-basic>
                         </div>
                         <div class="col-6">
                           <tes-input-basic
                             [label]="'Дата рождения'"
-                            formControlName="driver_birth_date"
+                            formControlName="birthdate"
                           ></tes-input-basic>
                         </div>
                         <div class="col-6">
                           <tes-input-basic
                             [label]="'Водительское удостоверение №'"
-                            formControlName="driver_license_number"
+                            formControlName="license_number"
                           ></tes-input-basic>
                         </div>
                         <div class="col-6">
                           <tes-input-basic
                             [label]="'Кем выдано'"
-                            formControlName="driver_license_issued_by"
+                            formControlName="license_issued_by"
                           ></tes-input-basic>
                         </div>
                         <div class="col-6">
                           <tes-input-basic
                             [label]="'Дата выдачи'"
-                            formControlName="driver_license_issued_date"
+                            formControlName="license_issued_at"
                           ></tes-input-basic>
                         </div>
                         <div class="col-6">
                           <tes-input-basic
                             [label]="'Дата начала стажа вождения'"
-                            formControlName="driver_exp_start"
+                            formControlName="driver_experience_start_date"
                           ></tes-input-basic>
                         </div>
                         <div class="col-6"></div>
@@ -124,22 +124,17 @@
             </form>
           </div>
           <tes-button
+            class='mt-3'
             [title]="'Добавить водителя'"
             [color]="'secondary'"
+            (click)='addDriver([])'
           ></tes-button>
         </div>
         <div class="tes-wrapper-buttons">
-          <tes-button [title]="'Продолжить'" [color]="'primary'"></tes-button>
+          <tes-button [title]="'Продолжить'" [color]="'primary'" (click)='onSubmit()'></tes-button>
+          <tes-button [title]="'Update'" [color]="'primary'" (click)='onUpdateDrivers()'></tes-button>
         </div>
-      </div>
-      <div class="tes-container-buttons">
-        <button mat-stroked-button>Добавить водителя</button>
-        <tes-submit-form-button
-          [formValues]="formDriversData"
-          [isDisable]="!formDriversData.valid"
-          buttonText="Продолжить"
-        ></tes-submit-form-button>
       </div>
     </div>
   </div>
-</div>
+
